Enrich dropout students with user details
Change PaymentServiceClient to fetch dropout student IDs from Payment Service, then enrich them with full user info via UserServiceClient. Replaced previous direct DropoutStudentResponse payload handling with UUID[] response, added mapping to DropoutStudentResponse using UserInfo, added logging and a javadoc for the method, and switched configuration injection to @Value fields with RequiredArgsConstructor for constructor-less wiring. Also adjusted controller debug logs to include the returned student count.